# kratos-agents

./: .gitignore  .replit  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE.md  IMPLEMENTATION.md  PR_SUMMARY.md  QUICKSTART.md  README.md  WIKI_DEPLOYMENT.md  WIKI_SUMMARY.md  demo.py  demo_agentic.py  download_spark_logs.py  fingerprint.json  fingerprint_rca.json  my_fingerprint.json  pyproject.toml  replit.md  requirements.txt  server.py  start.ps1
.github/: copilot-instructions.md
a2a/: __init__.py  protocol.py  server.py
agents/: __init__.py
connectors/: __init__.py  airflow_ingestion.py  bank_pipeline.py  base_connector.py  spark_ingestion.py
core/: __init__.py  base_agent.py  builder.py  config.py  instructions.py  llm.py  models.py
dashboard/: index.html  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.ts
data/: event_logs.json  event_logs_rca.json  fingerprint.json  fingerprint.md  fingerprint.yaml  kratos_data_20260316_1339.csv  test_event_log.json
docker/: Dockerfile  docker-compose.yml  nginx.conf
examples/: sample_etl.py
fingerprints/: fingerprint_event_logs_rca_20260114_200233.json  fingerprint_event_logs_rca_20260114_200305.json
git-log-extractor/: README.md  USAGE.md
git_dataflow_runs/: git_dataflow_20260121T040922Z_ad0d085b.json
logs/: DOWNLOAD_MANIFEST.txt  INDEX.json
memory_layer/: __init__.py  graph_state.py  lineage_map.py  ontology_schema.py
operational_systems/: __init__.py
prompts/: README.md  change_analyzer.yaml  lineage_extraction.yaml  (+3 more)
(+352 files in other folders)
