[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "spark-execution-fingerprint"
version = "3.0.0"
description = "Spark Execution Fingerprint: LLM-optimized analysis of Spark applications from event logs"
authors = [{name = "Spark Analysis Team"}]
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "pyspark>=3.3",
    "pyyaml>=6.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# Makes `src/` importable as a plain namespace so tests can do
#   from orchestrator import ...   (same style as production code uses internally)
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
